--- a/app/src/main/res/layout/act_play_video.xml
+++ b/app/src/main/res/layout/act_play_video.xml
@@ -85,12 +85,17 @@
             android:id="@+id/refresh_layout_comment"
             android:layout_width="match_parent"
             android:layout_height="0dp">
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/rcv_comment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rcv_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
 
-        </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.RecyclerView>
+
+            <include layout="@layout/layout_video_list_empty" android:visibility="gone"/>
+        </FrameLayout>
+
 
     </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
     <LinearLayout
@@ -102,7 +107,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_width="match_parent" android:layout_height="55dp">
         <FrameLayout
-                android:layout_marginLeft="39dp"
+                android:layout_marginLeft="16dp"
                 android:background="@drawable/shape_r18_f4"
                 android:layout_weight="1"
                 android:layout_width="match_parent" android:layout_height="33dp">
