代理，宣传换内容 隐藏交易 钱包 推广改名宣传 视频广告位置调整  wifi直接播放 欢迎页广告点击问题

--- a/app/src/main/res/layout/act_web.xml
+++ b/app/src/main/res/layout/act_web.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.dkzwm.widget.srl.ClassicSmoothRefreshLayout
-        android:id="@+id/refresh_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<FrameLayout         xmlns:android="http://schemas.android.com/apk/res/android"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+>
+    <me.dkzwm.widget.srl.ClassicSmoothRefreshLayout
+            android:id="@+id/refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
     <WebView
             android:id="@+id/web_view"
             android:layout_width="match_parent" android:layout_height="match_parent"></WebView>
-</me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
+</FrameLayout>
