--- a/app/src/main/res/layout/frag_base_video_list.xml
+++ b/app/src/main/res/layout/frag_base_video_list.xml
@@ -4,4 +4,6 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
     <include layout="@layout/layout_refresh_recyclerview"/>
+
+    <include layout="@layout/layout_video_list_empty"/>
 </FrameLayout>
