--- a/app/src/main/res/layout/act_play_video.xml
+++ b/app/src/main/res/layout/act_play_video.xml
@@ -28,11 +28,16 @@
 
 
         <ImageView
+                android:adjustViewBounds="true"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginLeft="9dp"
                 android:layout_gravity="left"
                 android:src="@mipmap/back"
-                android:layout_width="11dp" android:layout_height="20dp" android:id="@+id/img_close"/>
+                android:layout_width="wrap_content" android:layout_height="40dp" android:id="@+id/img_close"/>
 
     </FrameLayout>
 
