--- a/app/src/main/res/layout/frag_type_video.xml
+++ b/app/src/main/res/layout/frag_type_video.xml
@@ -38,5 +38,40 @@
     </LinearLayout>
 
 
-    <include layout="@layout/layout_refresh_recyclerview"/>
+    <me.dkzwm.widget.srl.ClassicSmoothRefreshLayout
+            android:layout_weight="1"
+            android:id="@+id/refresh_layout"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@color/white"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:sr_enableLoadMore="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            <LinearLayout
+                    android:background="@color/white"
+                    android:id="@+id/ll_empty"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_width="match_parent" android:layout_height="match_parent">
+                <ImageView
+                        android:adjustViewBounds="true"
+                        android:src="@mipmap/empty_data"
+                        android:layout_width="124dp" android:layout_height="wrap_content"/>
+                <TextView
+                        android:layout_marginTop="18dp"
+                        android:text="暂无数据"
+                        android:textColor="#ff333333"
+                        android:textSize="18dp"
+                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </FrameLayout>
+
+
+    </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
 </LinearLayout>
