--- a/app/src/main/res/layout/jz_layout_std_custom.xml
+++ b/app/src/main/res/layout/jz_layout_std_custom.xml
@@ -5,6 +5,7 @@
                 android:background="@android:color/black"
                 android:descendantFocusability="afterDescendants">
 
+
     <FrameLayout
         android:id="@+id/surface_container"
         android:layout_width="match_parent"
@@ -255,6 +256,12 @@
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                  android:layout_height="match_parent">
 
+        <com.jyt.video.common.view.StatusBarHeightView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/status_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></com.jyt.video.common.view.StatusBarHeightView>
 
         <FrameLayout
                 android:visibility="gone"
@@ -327,7 +334,7 @@
                 android:background="@color/white"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/status_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -342,7 +349,7 @@
                 android:background="@color/white"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/status_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
