--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -12,13 +12,20 @@
                 android:layout_width="29dp" android:layout_height="29dp" android:id="@+id/img_back"/>
 
         <TextView
+                android:gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:singleLine="true"
+                android:ellipsize="middle"
+                android:layout_toRightOf="@id/img_back"
+                android:layout_toLeftOf="@id/tv_right_function"
                 android:includeFontPadding="false"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="标题"
                 android:textColor="#ffffffff"
-                android:textSize="17sp"
+                android:textSize="17dp"
                 android:id="@+id/tv_title"/>
 
 
