--- a/app/src/main/res/layout/vh_introduce_header.xml
+++ b/app/src/main/res/layout/vh_introduce_header.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <TextView
+            android:lineSpacingMultiplier="1.3"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constrainedWidth="true"
             android:ellipsize="end"
@@ -34,7 +35,7 @@
             android:text="简介：韩剧里女生的各种撒娇，男生请慎点...简介：韩剧里女生的各种撒娇，男生请慎点..."
             android:textColor="#ff000000"
             android:textSize="14dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8dp"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
             app:layout_constraintRight_toLeftOf="@+id/img_show_all_info"/>
 
     <ImageView
@@ -56,7 +57,7 @@
             android:layout_width="17dp" android:layout_height="17dp"/>
 
     <ImageView
-            android:src="@mipmap/xiazai_gray"
+            android:src="@mipmap/xiazai_new"
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
             app:layout_constraintTop_toTopOf="parent"
