--- a/app/src/main/res/layout/vh_recharge_input_item.xml
+++ b/app/src/main/res/layout/vh_recharge_input_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--                                             android:layout_height="110dp"
+-->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="115dp"
-                                             android:layout_height="110dp"
                                              android:layout_marginTop="4dp"
+                                             android:layout_height="wrap_content"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
@@ -10,8 +12,9 @@
             android:layout_marginTop="7dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/shape_recharge_item_nor"
-            android:layout_width="113dp" android:layout_height="103dp">
+            android:layout_width="113dp" android:layout_height="0dp">
 
     </View>
 
@@ -65,12 +68,14 @@
             android:alpha="0.38"
             android:layout_width="0dp" android:layout_height="1dp"/>
     <TextView
+            android:layout_marginTop="7dp"
             android:includeFontPadding="false"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
             android:paddingLeft="17dp"
             android:paddingRight="17dp"
             android:layout_marginBottom="7dp"
+            app:layout_constraintTop_toBottomOf="@id/input_price"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
