--- a/app/src/main/res/layout/vh_recharge_item.xml
+++ b/app/src/main/res/layout/vh_recharge_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="115dp"
-                                             android:layout_height="110dp"
-                                             android:layout_marginTop="4dp"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
+                                             android:layout_height="wrap_content"
+                                             android:layout_marginTop="4dp">
 
     <View
             android:id="@+id/v_background"
             android:layout_marginTop="7dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/shape_recharge_item_nor"
-            android:layout_width="113dp" android:layout_height="103dp">
+            android:layout_height="0dp"
+            android:layout_width="113dp">
 
     </View>
     <TextView
@@ -40,10 +42,9 @@
             android:textSize="16dp"
             android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_title"/>
     <TextView
-            android:layout_marginTop="40dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/tv_price"
             app:layout_constrainedWidth="true"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/v_background"
             app:layout_constraintRight_toLeftOf="@id/tv_price"
             android:id="@+id/tv_unit"
@@ -58,23 +59,25 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constrainedWidth="true"
             android:includeFontPadding="false"
-            app:layout_constraintTop_toTopOf="@+id/v_background"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             app:layout_constraintLeft_toRightOf="@id/tv_unit"
             app:layout_constraintRight_toRightOf="@id/v_background"
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1880"
+            android:text="00"
             android:textColor="#ff9c28b1"
             android:textSize="26dp"
-            android:layout_marginTop="32dp"/>
+    />
     <TextView
+            android:layout_marginTop="8dp"
             android:includeFontPadding="false"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
             android:paddingLeft="17dp"
             android:paddingRight="17dp"
             android:layout_marginBottom="7dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_price"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
