--- a/app/src/main/res/layout/act_account_info.xml
+++ b/app/src/main/res/layout/act_account_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
     <LinearLayout
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent" android:layout_height="1dp"/>
 
         <FrameLayout android:layout_width="match_parent" android:layout_height="50dp"
-                     android:id="@+id/fl_to_cs_account">
+                     android:id="@+id/fl_to_cs_account" android:visibility="gone">
 
             <TextView
                     android:layout_gravity="center_vertical|left"
@@ -87,7 +87,7 @@
         <View
                 android:layout_marginLeft="17dp"
                 android:background="#EEEEEE"
-                android:layout_width="match_parent" android:layout_height="1dp"/>
+                android:layout_width="match_parent" android:layout_height="1dp" tools:visibility="gone"/>
 
         <FrameLayout android:layout_width="match_parent" android:layout_height="50dp"
                      android:id="@+id/fl_to_modify_psd">
