--- a/app/src/main/res/layout/act_browse_image.xml
+++ b/app/src/main/res/layout/act_browse_image.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/frame_layout"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
-    <include layout="@layout/layout_refresh_recyclerview"/>
+
+    <com.jyt.video.common.adapter.ExtendedViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+                                                    android:layout_height="match_parent">
+
+    </com.jyt.video.common.adapter.ExtendedViewPager>
 </FrameLayout>
