--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -29,7 +29,9 @@
                 android:background="#EEEEEE"
                 android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="17dp"/>
 
-        <FrameLayout android:layout_width="match_parent" android:layout_height="48dp" android:id="@+id/fl_to_about">
+        <FrameLayout
+                android:visibility="gone"
+                android:layout_width="match_parent" android:layout_height="48dp" android:id="@+id/fl_to_about">
             <TextView
                     android:layout_marginLeft="15dp"
                     android:layout_gravity="center_vertical"
@@ -43,9 +45,44 @@
                     android:adjustViewBounds="false"
                     android:src="@mipmap/next_gray" android:layout_width="10dp" android:layout_height="18dp"/>
         </FrameLayout>
+
+
         <View
+                android:visibility="gone"
                 android:background="#EEEEEE"
                 android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="17dp"/>
+
+
+        <FrameLayout
+                android:visibility="visible"
+                android:layout_width="match_parent" android:layout_height="48dp" android:id="@+id/fl_check_version">
+            <TextView
+                    android:layout_marginLeft="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="检查更新"
+                    android:textColor="#ff000000"
+                    android:textSize="16dp"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            <TextView
+                    android:layout_marginRight="40dp"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="1.0"
+                    android:textSize="14dp"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:id="@+id/tv_cur_version"/>
+            <ImageView
+                    android:layout_marginRight="15dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:adjustViewBounds="false"
+                    android:src="@mipmap/next_gray" android:layout_width="10dp" android:layout_height="18dp"/>
+        </FrameLayout>
+
+
+        <View
+                android:visibility="gone"
+                android:background="#EEEEEE"
+                android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="17dp"/>
+
 
         <FrameLayout android:layout_width="match_parent" android:layout_height="48dp">
 
