--- a/app/src/main/res/layout/act_welcome.xml
+++ b/app/src/main/res/layout/act_welcome.xml
@@ -5,7 +5,8 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-            android:background="#66666666"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/welcome_loading"
             android:id="@+id/img_welcome"
             android:layout_width="match_parent" android:layout_height="match_parent"/>
 
