--- a/app/src/main/res/layout/frag_type_video.xml
+++ b/app/src/main/res/layout/frag_type_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:clickable="true"
               android:background="@color/white"
               android:layout_width="match_parent"
               android:orientation="vertical"
@@ -45,6 +46,8 @@
             android:background="@color/white"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             app:sr_enableLoadMore="true"
+            app:sr_enableOverScroll="false"
+            app:sr_mode="mode_default"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
