--- a/app/src/main/res/layout/jz_layout_std_custom.xml
+++ b/app/src/main/res/layout/jz_layout_std_custom.xml
@@ -137,19 +137,18 @@
             android:src="@drawable/jz_click_back_selector" />
 
         <TextView
+            android:layout_alignParentRight="true"
+            android:singleLine="true"
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_toLeftOf="@+id/battery_time_layout"
-            android:layout_toEndOf="@+id/back"
+            android:layout_marginRight="100dp"
             android:layout_toRightOf="@+id/back"
             android:ellipsize="end"
-            android:maxLines="2"
             android:textColor="#ffffff"
             android:textSize="18sp" />
+
 
         <LinearLayout
             android:id="@+id/battery_time_layout"
@@ -201,10 +200,10 @@
         android:layout_gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/start"
-            android:layout_width="@dimen/jz_start_button_w_h_normal"
-            android:layout_height="@dimen/jz_start_button_w_h_normal"
-            android:src="@drawable/jz_click_play_selector" />
+                android:id="@+id/start"
+                android:layout_width="@dimen/jz_start_button_w_h_normal"
+                android:layout_height="@dimen/jz_start_button_w_h_normal"
+                android:src="@drawable/jz_click_play_selector" android:visibility="gone"/>
     </LinearLayout>
 
 
@@ -271,12 +270,12 @@
             <LinearLayout
                     android:id="@+id/ll_vip_jump_ad"
                     android:layout_gravity="right"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="23dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/shape_14r_30apl"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_width="99dp" android:layout_height="20dp">
+                    android:layout_width="wrap_content" android:layout_height="20dp">
                 <TextView
                         android:id="@+id/tv_not_member_timer"
                         android:text="60"
