--- a/app/src/main/res/layout/vh_advertising.xml
+++ b/app/src/main/res/layout/vh_advertising.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-        android:background="@color/white"
         xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <ImageView
             android:id="@+id/img_advertising"
-            android:layout_marginTop="4dp"
             android:background="#EAEAEA"
             android:layout_width="match_parent" android:layout_height="60dp"/>
 
@@ -20,10 +19,10 @@
             android:textSize="10dp"
             android:background="@drawable/shape_advertising_label"
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-    
+
     <ImageView
             android:layout_marginRight="4dp"
             android:layout_alignParentRight="true"
             android:src="@mipmap/circle_close"
-            android:layout_width="14dp" android:layout_height="14dp"/>
+            android:layout_width="14dp" android:layout_height="14dp" android:id="@+id/img_close"/>
 </RelativeLayout>
