--- a/app/src/main/res/layout/vh_thumb_video.xml
+++ b/app/src/main/res/layout/vh_thumb_video.xml
@@ -3,7 +3,8 @@
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               app:cardCornerRadius="11dp"
                                               android:layout_marginLeft="8dp"
-                                              android:layout_marginBottom="15dp"
+                                              android:layout_marginTop="13dp"
+                                              android:layout_marginBottom="2dp"
                                              android:layout_width="wrap_content"
                                              android:layout_height="wrap_content">
     <android.support.constraint.ConstraintLayout
