--- a/app/src/main/res/layout/act_play_video.xml
+++ b/app/src/main/res/layout/act_play_video.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
 >
     <com.jyt.video.common.view.StatusBarHeightView
+            android:background="@color/black"
     android:id="@+id/status_bar"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -77,18 +78,18 @@
 
 
 
-    <com.flyco.tablayout.CommonTabLayout
-            app:tl_indicator_width="26dp"
-            app:tl_textSelectColor="#9C28B1"
-            app:tl_textUnselectColor="#000000"
-            app:tl_indicator_color="#9C28B1"
-            app:tl_indicator_height="3dp"
-            app:tl_divider_color="#9C28B1"
-            android:background="@color/white"
-            android:id="@+id/tab_layout"
-            app:layout_constraintTop_toBottomOf="@id/fl_video"
-            android:layout_width="match_parent"
-                                                   android:layout_height="40dp"></com.flyco.tablayout.CommonTabLayout>
+    <!--<com.flyco.tablayout.CommonTabLayout-->
+            <!--app:tl_indicator_width="26dp"-->
+            <!--app:tl_textSelectColor="#9C28B1"-->
+            <!--app:tl_textUnselectColor="#000000"-->
+            <!--app:tl_indicator_color="#9C28B1"-->
+            <!--app:tl_indicator_height="3dp"-->
+            <!--app:tl_divider_color="#9C28B1"-->
+            <!--android:background="@color/white"-->
+            <!--android:id="@+id/tab_layout"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/fl_video"-->
+            <!--android:layout_width="match_parent"-->
+                                                   <!--android:layout_height="40dp"></com.flyco.tablayout.CommonTabLayout>-->
 
 
     <me.dkzwm.widget.srl.ClassicSmoothRefreshLayout
@@ -98,7 +99,7 @@
             app:layout_goneMarginBottom="0dp"
             android:background="@color/white"
             app:sr_enableLoadMore="false"
-            app:layout_constraintTop_toBottomOf="@id/tab_layout"
+            app:layout_constraintTop_toBottomOf="@id/fl_video"
             app:layout_constraintBottom_toTopOf="@id/fl_comment_bottom"
             android:id="@+id/refresh_layout_detail"
             android:layout_width="match_parent"
@@ -111,32 +112,32 @@
                 android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
-    <me.dkzwm.widget.srl.ClassicSmoothRefreshLayout
+    <!--<me.dkzwm.widget.srl.ClassicSmoothRefreshLayout-->
 
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="14dp"
-            app:layout_goneMarginBottom="0dp"
-            android:background="@color/white"
-            app:sr_enableOverScroll="false"
-            app:sr_enableLoadMore="false"
-            app:layout_constraintTop_toBottomOf="@id/tab_layout"
-            app:layout_constraintBottom_toTopOf="@id/fl_comment_bottom"
-            android:id="@+id/refresh_layout_comment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rcv_comment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:layout_marginBottom="14dp"-->
+            <!--app:layout_goneMarginBottom="0dp"-->
+            <!--android:background="@color/white"-->
+            <!--app:sr_enableOverScroll="false"-->
+            <!--app:sr_enableLoadMore="false"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/tab_layout"-->
+            <!--app:layout_constraintBottom_toTopOf="@id/fl_comment_bottom"-->
+            <!--android:id="@+id/refresh_layout_comment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp">-->
+        <!--<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">-->
+            <!--<android.support.v7.widget.RecyclerView-->
+                    <!--android:id="@+id/rcv_comment"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent" >-->
 
-            </android.support.v7.widget.RecyclerView>
+            <!--</android.support.v7.widget.RecyclerView>-->
 
-            <include layout="@layout/layout_video_list_empty" android:visibility="gone"/>
-        </FrameLayout>
+            <!--<include layout="@layout/layout_video_list_empty" android:visibility="gone"/>-->
+        <!--</FrameLayout>-->
 
 
-    </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
+    <!--</me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>-->
     <LinearLayout
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -182,11 +183,11 @@
                 android:layout_width="92dp" android:layout_height="32dp"/>
     </LinearLayout>
 
-    <android.support.constraint.Group
-            android:visibility="gone"
-            android:id="@+id/group_comment"
-            app:constraint_referenced_ids="fl_comment_bottom,refresh_layout_comment"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <!--<android.support.constraint.Group-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/group_comment"-->
+            <!--app:constraint_referenced_ids="fl_comment_bottom,refresh_layout_comment"-->
+            <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
 
 
 </android.support.constraint.ConstraintLayout>
