--- a/app/src/main/res/layout/act_promotion.xml
+++ b/app/src/main/res/layout/act_promotion.xml
@@ -139,6 +139,7 @@
                         android:layout_width="70dp" android:layout_height="1dp"/>
 
                 <ImageView
+                        android:scaleType="centerCrop"
                         android:layout_marginTop="65dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
