--- a/app/src/main/res/layout/frag_deal_record.xml
+++ b/app/src/main/res/layout/frag_deal_record.xml
@@ -11,6 +11,7 @@
             android:background="@color/white"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             app:sr_enableLoadMore="true"
+            app:sr_enableOverScroll="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
