--- a/app/src/main/res/layout/jz_layout_std_custom.xml
+++ b/app/src/main/res/layout/jz_layout_std_custom.xml
@@ -37,10 +37,17 @@
                 android:id="@+id/img_video_play"
                 android:src="@mipmap/video_play"
                 android:layout_width="22dp" android:layout_height="22dp"/>
+        <TextView
 
+                android:id="@+id/current"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:text="00:00"
+                android:textColor="#ffffff" />
 
         <SeekBar
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="12dp"
             android:id="@+id/bottom_seek_progress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -56,17 +63,11 @@
             android:paddingBottom="8dp"
             android:progressDrawable="@drawable/jz_bottom_seek_progress"
             android:thumb="@drawable/jz_bottom_seek_thumb" />
-        <TextView
-                android:id="@+id/current"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="14dp"
-                android:text="00:00"
-                android:textColor="#ffffff" />
-        <TextView
-                android:text="/"
-                android:textColor="#ffffff"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+
+        <!--<TextView-->
+                <!--android:text="/"-->
+                <!--android:textColor="#ffffff"-->
+                <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
         <TextView
             android:id="@+id/total"
             android:layout_width="wrap_content"
@@ -329,10 +330,9 @@
         </FrameLayout>
 
         <ImageView
+                app:layout_constraintWidth_percent="0.8"
                 android:id="@+id/img_ad_pause"
-                android:background="@color/white"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+
                 app:layout_constraintTop_toTopOf="@id/status_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -341,13 +341,12 @@
                 app:layout_constrainedHeight="true"
                 app:layout_constraintDimensionRatio="316:173"
                 android:visibility="gone"
-                android:layout_width="match_parent" android:layout_height="0dp"/>
+                android:layout_width="0dp" android:layout_height="0dp"/>
 
         <ImageView
+                app:layout_constraintWidth_percent="0.8"
                 android:visibility="gone"
-                android:background="@color/white"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+
                 app:layout_constraintTop_toTopOf="@id/status_bar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -357,7 +356,7 @@
                 app:layout_constraintDimensionRatio="316:173"
                 android:id="@+id/img_ad_before"
                 android:layout_gravity="center"
-                android:layout_width="match_parent" android:layout_height="0dp"/>
+                android:layout_width="0dp" android:layout_height="0dp"/>
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
