--- a/app/src/main/res/layout/vh_comment.xml
+++ b/app/src/main/res/layout/vh_comment.xml
@@ -8,7 +8,7 @@
     <ImageView
             android:id="@+id/img_avatar"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@mipmap/default_avatar"
@@ -16,9 +16,8 @@
 
     <TextView
             android:id="@+id/tv_name"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/img_avatar"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginLeft="68dp"
             android:text="小kiss"
             android:textColor="#ff333333"
@@ -39,9 +38,8 @@
 
     <TextView
             android:id="@+id/tv_date"
-            android:layout_marginTop="14dp"
             android:layout_marginRight="40dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/img_avatar"
             app:layout_constraintRight_toRightOf="parent"
             android:text="2018/12/6"
             android:textColor="#ff333333"
@@ -51,20 +49,21 @@
     <TextView
             android:layout_marginLeft="68dp"
             android:id="@+id/tv_content"
-            android:layout_marginBottom="19dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="36dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:text="SEE = Seeking Experience &amp; Engineering，意为探索用户体验与工程实践，由蚂蚁金服集团每年举办 1-2 次，包括专业分享、产品Workshop 等内容。"
             android:textColor="#ff333333"
             android:textSize="14dp"
-            android:layout_width="0dp" android:layout_height="wrap_content"/>
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
     
     <View
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="#EEEEEE"
             android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
 </android.support.constraint.ConstraintLayout>
