--- a/app/src/main/res/layout/vh_introduce_header.xml
+++ b/app/src/main/res/layout/vh_introduce_header.xml
@@ -7,9 +7,8 @@
 
 
     <TextView
-            android:layout_marginRight="18dp"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="33dp"
+            android:layout_marginTop="13dp"
             app:layout_constrainedWidth="true"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintRight_toRightOf="parent"
@@ -19,7 +18,10 @@
             android:text="【中韩字幕撒娇合集】"
             android:textColor="#ff000000"
             android:textSize="16dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="8dp"
+            app:layout_constraintRight_toLeftOf="@+id/img_like"/>
 
     <TextView
             android:lineSpacingMultiplier="1.3"
