--- a/app/src/main/res/layout/vh_promotion_item.xml
+++ b/app/src/main/res/layout/vh_promotion_item.xml
@@ -5,14 +5,18 @@
                                              android:layout_height="60dp">
 
     <TextView
+            android:id="@+id/tv_name"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:layout_marginLeft="53dp"
             android:layout_gravity="left|center_vertical"
             android:text="推广用户1"
             android:textColor="#ff505050"
             android:textSize="16dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            android:layout_width="200dp" android:layout_height="wrap_content"/>
 
     <TextView
+            android:id="@+id/tv_date"
             android:layout_marginRight="27dp"
             android:layout_gravity="right|center_vertical"
             android:text="2019-03-10"
