--- a/app/src/main/res/layout/vh_recharge_input_item.xml
+++ b/app/src/main/res/layout/vh_recharge_input_item.xml
@@ -44,7 +44,7 @@
             android:textColor="#ff000000"
             android:textSize="16dp"
             android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-   
+
     <EditText
             android:inputType="number|numberSigned"
             android:gravity="center"
@@ -55,7 +55,7 @@
             app:layout_constraintRight_toRightOf="@id/v_background"
             android:id="@+id/input_price"
             android:minWidth="48dp"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textColor="#ff9c28b1"
             android:textSize="26dp"
@@ -68,6 +68,8 @@
             android:alpha="0.38"
             android:layout_width="0dp" android:layout_height="1dp"/>
     <TextView
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
             android:paddingTop="4dp"
